adding dashboard ui for resident's view
# Conflicts:
#	src/main/java/com/example/quanlytoanha/Main.java
#	src/main/java/module-info.java