@@ -1,7 +1,6 @@
 plugins {
     java
     application
-    id("org.javamodularity.moduleplugin") version "1.8.15"
     id("org.openjfx.javafxplugin") version "0.1.0"
     id("org.beryx.jlink") version "2.25.0"
 }
@@ -16,23 +15,34 @@ repositories {
 val junitVersion = "5.12.1"
 
 java {
+    modularity.inferModulePath.set(true)
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
-tasks.withType<JavaCompile> {
-    options.encoding = "UTF-8"
-}
-
 application {
-    //mainModule.set("com.example.quanlytoanha")
+    mainModule.set("com.example.quanlytoanha")
     mainClass.set("com.example.quanlytoanha.Launcher")
 }
 
 javafx {
     version = "21.0.6"
-    modules = listOf("javafx.controls", "javafx.fxml")
+    modules = listOf("javafx.controls", "javafx.fxml", "javafx.web", "javafx.graphics", "javafx.base")
+}
+
+tasks.withType<JavaCompile> {
+    options.encoding = "UTF-8"
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform()
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
 }
 
 dependencies {
@@ -42,10 +52,6 @@ dependencies {
     implementation("org.springframework.security:spring-security-core:6.5.5")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-}
-
-tasks.withType<Test> {
-    useJUnitPlatform()
 }
 
 jlink {
